# povtornyy-ekzamen-faq-bot-chromadb-odin-

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  config.py  docker-compose.yml  ingest.py  main.py  pyproject.toml  requirements.txt
src/: bot.py  chromadb_client.py  config.py  ingestion.py  logger.py  main.py  mcp_tool.py  retrieval.py  tool.py
tests/: test_api.py  test_bot.py  test_chromadb_client.py  test_ingestion.py  test_integration.py  test_mcp_tool.py  test_tool.py
tools/: http_tool.py
utils/: chroma_utils.py
