[tool.poetry]
name = "faq-bot"
version = "0.1.0"
description = "FAQ bot using ChromaDB and LangChain"
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.0"
uvicorn = "^0.29.0"
langchain = "^0.2.0"
chromadb = "^0.4.18"
openai = "^1.12.0"
python-dotenv = "^1.0.1"
pydantic = "^2.7.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
pytest-mock = "^3.14.0"
httpx = "^0.27.0"
black = "^24.4.2"
isort = "^5.13.2"
ruff = "^0.3.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 88
target-version = "py311"
select = ["E", "F", "W", "C90"]
ignore = ["E501"]

[tool.black]
line-length = 88
target-version = ["py311"]
exclude = '''
/(
    \.git
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 88
skip = ["__init__.py"]
